Fix table shifting leading to obscured sample ids when applying search filters

--- a/client/app/blueprints/public/static/main.css
+++ b/client/app/blueprints/public/static/main.css
@@ -9,3 +9,10 @@
 .corporate-logo {
     width: 25em;
 }
+
+/* CSS OVERRIDES */
+/* Prevent search ui from pushing table data off screen */
+/* when applying search filters in /groups              */
+div#grid_grid_searches.w2ui-grid-searches {
+    margin-right:0!important
+}
